bak: 정적 크롤링 구현 백업
